fix(registry): return immutable key snapshots